# multi-zone-mpc-master-thesis

./: .gitattributes  .gitignore  README.md  requirements.txt
AgentLib-MPC/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  DockerfileMPC  README.md  pyproject.toml  requirements.txt  setup.cfg
AgentLib-MPC/agentlib_mpc/: __init__.py
AgentLib-MPC/agentlib_mpc/data_structures/: admm_datatypes.py  casadi_utils.py  coordinator_datatypes.py  interpolation.py  ml_model_datatypes.py  mpc_datamodels.py
AgentLib-MPC/agentlib_mpc/models/: __init__.py  casadi_ml_model.py  casadi_model.py  casadi_predictor.py  serialized_ml_model.py
AgentLib-MPC/agentlib_mpc/modules/: __init__.py  data_source.py  minlp_mpc.py  ml_model_simulator.py  mpc.py  mpc_full.py
AgentLib-MPC/agentlib_mpc/optimization_backends/: README.md  __init__.py  backend.py
AgentLib-MPC/agentlib_mpc/utils/: __init__.py  analysis.py  sampling.py
AgentLib-MPC/ci/: test_examples.py
AgentLib-MPC/docs/source/: PackageReference.md  agentlib_mpc.data_structures.rst  agentlib_mpc.models.rst  agentlib_mpc.modules.dmpc.admm.rst  agentlib_mpc.modules.dmpc.rst  agentlib_mpc.modules.rst  agentlib_mpc.optimization_backends.casadi_.core.rst  agentlib_mpc.optimization_backends.casadi_.rst  agentlib_mpc.optimization_backends.rst  agentlib_mpc.rst  agentlib_mpc.utils.plotting.rst  conf.py  index.rst  (+3 more)
AgentLib-MPC/tests/: conftest.py  test_admm.py  test_casadi_backend.py  test_casadi_ml_model.py  test_miqp_backend.py  test_mpc.py  test_serialized_ann.py  test_serialized_gpr.py  test_serialized_linreg.py
(+578 files in other folders)
